@@ -1,0 +1,5 @@
+package st.redline.stout;
+
+public interface Block {
+    Object applyTo(Object... parameters);
+}
