@@ -1,0 +1,5 @@
+package st.redline.stout;
+
+public interface RequestPathSpecificationFactory {
+    RequestPathSpecification create(String specification);
+}
