@@ -1,0 +1,7 @@
+package st.redline.stout;
+
+public class RequestPathSpecificationFactoryImpl implements RequestPathSpecificationFactory {
+    public RequestPathSpecification create(String specification) {
+        return new RequestPathSpecificationImpl(specification);
+    }
+}
