@@ -1,0 +1,5 @@
+package st.redline.stout;
+
+public interface ResponseSerializer {
+    String serialize(Object object);
+}
